--- a/plugins/ff/styles/ffPlugin.css
+++ b/plugins/ff/styles/ffPlugin.css
@@ -64,3 +64,6 @@ li.ff-videos-list-item {
     stroke-dashoffset: 101;
     transition: all 350ms cubic-bezier(1, 0, 0.37, 0.91);
 }
+.display-none{
+    display: none;
+}
